--- a/index.css
+++ b/index.css
@@ -4,14 +4,17 @@
   padding: 0;
 }
 
-html {
+/* html {
+
 }
 
 body {
+
 }
 
 header {
-}
+
+} */
 
 h1 {
   font-size: 1.5em;
@@ -35,10 +38,15 @@ main {
   text-align: center;
 }
 
-.container {
+.question_container {
+    background-color: red;
+    width: 100%;
+    height: 100%
+    margin: 5px;
 }
 
-.welcome_form {
+.hidden {
+    display: none;
 }
 
 .welcome_form > fieldset {
