--- a/index.css
+++ b/index.css
@@ -4,49 +4,59 @@
   padding: 0;
 }
 
-/* html {
-
+html {
+  background-image: url("./images/background.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  font-family: Roboto, sans;
 }
 
 body {
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 header {
-
-} */
+  margin-top: 5px;
+}
 
 h1 {
   font-size: 1.5em;
 }
 
-.quiz_header {
+.quiz_header, main, .question_tracker {
   border: 1px solid black;
   border-radius: 5px;
+}
+
+.quiz_header {
   text-align: center;
-  padding: 10px;
+  padding: 5px;
   width: 280px;
-  margin: 5px;
 }
 
 main {
   margin-top: 5px;
-  border: 1px solid black;
-  border-radius: 5px;
   width: 280px;
   height: 400px;
   text-align: center;
 }
 
 .question_container {
-    background-color: red;
-    width: 100%;
-    height: 100%
-    margin: 5px;
+  background-color: red;
+  width: 100%;
+  height: 100%;
+  margin: 5px;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 .welcome_form > fieldset {
@@ -59,4 +69,20 @@ main {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin-top: 5px;
 }
+
+.question_tracker li {
+  text-align: center;
+}
+
+/**********Media Queries**********/
+
+/**********Phones**********/
+
+@media screen and (min-width: 320px) {
+}
+
+/**********Tablets**********/
+
+/**********Desktops**********/
