--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 }
 
 html {
-  background-image: url("./images/background.jpg");
+  background-image: linear-gradient(-60deg, rgba(206,17,65, 0), rgba(19, 39, 79, 1));
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -24,6 +24,7 @@ body {
 
 header {
   margin-top: 5px;
+  text-shadow: 1px 1px 2px rgb(206, 17, 65);
 }
 
 h1 {
@@ -31,8 +32,9 @@ h1 {
 }
 
 .quiz_header, main, .question_tracker {
-  border: 1px solid black;
+  border: 2px solid #fff;
   border-radius: 5px;
+  color: #fff;
 }
 
 .quiz_header {
@@ -48,18 +50,66 @@ main {
   text-align: center;
 }
 
+fieldset {
+  margin-top: 15%;
+  height: 300px;
+  position: relative;
+  text-shadow: 1px 1px 2px rgb(206, 17, 65);
+}
+
+.welcome_form legend {
+  margin-bottom: 20px;
+}
+
+.welcome_form button {
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  margin-left: -75px;
+  font-size: 1.2em;
+  font-weight: 600;
+}
+
+button {
+  width: 150px;
+  height: 50px;
+  background-image: linear-gradient(rgba(206,17,65), #fff);
+  border-radius: 15px;
+  color: rgb(19, 39, 79);
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+button:focus,
+button:hover {
+  border: 3px solid #fff;
+  background-image: linear-gradient(to right, rgb(19, 39, 79), #fff);
+  transition: all 0.5s;
+  color: #fff;
+  text-shadow: 1px 1px 2px rgb(206, 17, 65);
+}
+
 .question_container {
-  background-color: red;
-  width: 100%;
-  height: 100%;
-  margin: 5px;
+  width: 90%;
+  height: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.question_container > form {
+  margin-top: 20px;
 }
 
 .hidden {
   display: none;
 }
 
-.welcome_form > fieldset {
+.welcome_form > fieldset,
+.question > fieldset {
   border: none;
 }
 
@@ -74,6 +124,7 @@ main {
 
 .question_tracker li {
   text-align: center;
+  text-shadow: 1px 1px 2px rgb(206, 17, 65);
 }
 
 /**********Media Queries**********/
@@ -84,5 +135,11 @@ main {
 }
 
 /**********Tablets**********/
+
+@media screen and (min-width: 720px) {
+  html {
+  background-image: url("./images/background.jpg");
+  }
+}
 
 /**********Desktops**********/
