--- a/index.css
+++ b/index.css
@@ -5,7 +5,8 @@
 }
 
 html {
-  background-image: linear-gradient(-60deg, rgba(206,17,65, 0), rgba(19, 39, 79, 1));
+  /* background-image: linear-gradient(-60deg, rgba(206,17,65, 0), rgba(19, 39, 79, 1)); */
+  background-image: url('https://imagesvc.timeincapp.com/v3/fan/image?url=https%3A%2F%2Ftomahawktake.com%2Fwp-content%2Fuploads%2Fgetty-images%2F2017%2F08%2F831206048-cape-cod-league-championship-series.jpg.jpg&c=sc&w=850&h=560');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -149,9 +150,7 @@ fieldset {
 /**********Tablets**********/
 
 @media screen and (min-width: 720px) {
-  html {
-  background-image: url("./images/background.jpg");
-  }
+  
 }
 
 /**********Desktops**********/
