--- a/index.css
+++ b/index.css
@@ -77,6 +77,7 @@ button {
   width: 150px;
   height: 50px;
   background-image: linear-gradient(rgba(206,17,65), #fff);
+  background-image: -webkit-linear-gradient(rgba(206,17,65), #fff);
   border-radius: 15px;
   color: rgb(19, 39, 79);
   font-size: 0.9em;
