localized compressed images and shuffle array of replay

--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
 }
 
 html {
-  background-image: url('./images/catcher.jpg');
+  background-image: url('./images/catcher-min.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
